--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "uvmcollab"
 version = "0.1.0"
 authors = [
     { name = "Ciro Fabian Bermudez Marquez", email = "cirofabian.bermudez@gmail.com" }
+    { name = "Luis Enrique Namigtle Jiménez", email = "namigtle066@gmail.com" }
 ]
 readme = "README.md"
 description = "A reference webpage for UVM users"
