chore: update mkdocs.yml with new md files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -139,6 +139,8 @@ nav:
     - skills/index.md
     - Git:
       - skills/git/git-basics.md
+      - skills/git/git-ssh.md
+      - skills/git/git-flow.md
     - Makefile:
       - skills/makefile/makefile-basics.md
     - Python:
