--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-# Directories
-.venv/
-venv/
-*.egg-info/
+# Python-generated files
+__pycache__/
+*.py[oc]
 build/
+dist/
+wheels/
+*.egg-info
 
-# Files
-*.pdf
+# Virtual environments
+.venv
+
+# Zensical
+site/
