--- a/zensical.toml
+++ b/zensical.toml
@@ -51,7 +51,7 @@ Copyright &copy; 2026 uvmcollab
 nav = [
   { "Home" = [
       "index.md",
-      {"Home" = "home/home.md"},
+      {"Home" = "home/get-started.md"},
   ]},
   { "SV" =  [
       {"Get started" = "sv/get-started.md"},
