--- a/zensical.toml
+++ b/zensical.toml
@@ -70,8 +70,10 @@ nav = [
   { "UVM" =  [
       {"UVM" = "uvm/uvm.md"},
       { "Guidelines" = [
-        "uvm/guidelines/resource-guide.md",
-        "uvm/guidelines/coding-guidelines.md",
+        {"Resource Guide" = "uvm/guidelines/resource-guide.md"},
+        {"UVM Coding Guidelines" = "uvm/guidelines/coding-guidelines.md"},
+        {"Verification Plan" = "uvm/guidelines/verification-plan.md"},
+        {"Coverage Metrics" = "uvm/guidelines/coverage-metrics.md"},
       ]},
       { "UVC Templates" = [
         {"Sequence Item" = "uvm/uvc-templates/sequence-item.md"},
