--- a/zensical.toml
+++ b/zensical.toml
@@ -80,6 +80,7 @@ nav = [
       ]},
       { "Advanced Techniques" = [
         {"HDL Backdoor Access" = "uvm/advanced-techniques/hdl-backdoor-access.md"},
+        {"SystemRDL" = "uvm/advanced-techniques/systemrdl.md"},
       ]},
   ]},
   { "IP Blocks" =  [
